dnl Process this file with autoconf to produce a configure script.
AC_INIT(src)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(tgdb, 0.2.2)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# determine if we are running in linux, cygwin, solaris, or freebsd
AC_CANONICAL_HOST

   case $host in
     *-*-linux*)
       SYSTEM=LINUX
       AC_DEFINE(HAVE_LINUX, 1,  Linux environment)
       ;;
     *-*-cygwin*)
       SYSTEM=CYGWIN
       AC_DEFINE(HAVE_CYGWIN, 1,  Cygwin environment)
       ;;
     *-*-solaris*)
       SYSTEM=SOLARIS
       AC_DEFINE(HAVE_SOLARIS, 1,  Solaris environment)
       ;;
     *-*-freebsd*)
       SYSTEM=FREEBSD
       AC_DEFINE(HAVE_FREEBSD, 1,  Freebsd environment)
       ;;
     *-*-hp*)
       SYSTEM=HP
       AC_DEFINE(HAVE_HP, 1,  Hp environment)
       ;;
     *)
       SYSTEM=UNKNOWN
       ;;
   esac

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

dnl determine if terminal headers are available for tgdb
AC_CHECK_HEADERS(pty.h sys/stropts.h termios.h sys/select.h)

dnl headers for pseudo.c -> don't know what these are for, I didn't write lib.
AC_CHECK_HEADERS(util.h libutil.h)

dnl determine other headers for tgdb, Error if they do not exist
AC_CHECK_HEADERS(errno.h fcntl.h grp.h pwd.h signal.h \
stdarg.h stdio.h stdlib.h string.h sys/ioctl.h \
sys/stat.h sys/time.h sys/types.h unistd.h,,AC_MSG_ERROR)

dnl Check for getopt.h, If this is here then getopt_long can be used.
AC_CHECK_HEADER(getopt.h, AC_DEFINE(HAVE_GETOPT_H, 1, have getopt_long))

dnl determine if /dev/ptmx is available for pseudo terminals
AC_CHECK_FILE([/dev/ptmx], AC_DEFINE(HAVE_DEV_PTMX, 1, have /dev/ptmx))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_PROG_RANLIB
AC_PROG_GCC_TRADITIONAL
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir putenv select strdup strerror)

AC_OUTPUT(Makefile src/Makefile)
